Tentativa de habilitar Google Drive

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,16 @@ MAIL_ENCRYPTION=null
 PUSHER_KEY=
 PUSHER_SECRET=
 PUSHER_APP_ID=
+
+
+# itarocha1972@gmail.com
+# composer require nesbot/carbon google/apiclient
+#add these:
+APP_TITLE=DriverBestPlus
+APP_TIMEZONE="America/Sao_Paulo"
+GOOGLE_CLIENT_ID="LaravelClient"
+GOOGLE_CLIENT_SECRET="AIzaSyC13a3RvN_Fo-sq1a3cXJwoxx5nfNzFbxk"
+GOOGLE_REDIRECT_URL="http://localhost:8000/login"
+GOOGLE_SCOPES="email,profile,https://www.googleapis.com/auth/drive"
+GOOGLE_APPROVAL_PROMPT="force"
+GOOGLE_ACCESS_TYPE="offline"
